# clipppr

./: .gitignore  README.md  config.toml  pyproject.toml  spec.md
clipper/: __init__.py  __main__.py  candidates.py  cli.py  config.py  models.py  naming.py  render.py  select.py  source.py  transcript.py
tests/: test_candidates.py  test_cli.py  test_config.py  test_naming.py  test_render.py  test_select.py  test_transcript.py
