[project]
name = "clipppr"
version = "0.1.0"
description = "Extract social-media-worthy video clips proposed by an LLM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
    "litellm>=1.40.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
clipper = "clipper.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["clipper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
